# amazing_hunting

./: db.sqlite3  pyproject.toml  pytests.ini
amazing_hunting/: asgi.py  settings.py  urls.py  wsgi.py
authentication/: models.py  serializers.py
authentication/migrations/: 0001_initial.py  0002_user_role.py  0002_user_кщду.py  0003_rename_кщду_user_role.py
companies/: urls.py  views.py
tests/: fixtures.py  simple_test.py
tests/vacancies/: vacancy_create_test.py  vacancy_list_test.py  vacancy_retrieve_test.py
vacancies/: models.py  serializers.py  urls.py  views.py
vacancies/migrations/: 0001_initial.py  0002_vacancy_user.py  0003_skill_vacancy_skills.py
